# kimi-signer

./: .gitignore  Cargo.toml  LICENSE  README.md  test-report.md  test_sign.sh
assets/: style.css
src/: app.rs  main.rs
src/components/: certificate_selector.rs  file_selector.rs  mod.rs  sign_button.rs  signature_config.rs  status_bar.rs
src/crypto/: cades.rs  certificate.rs  cms_builder.rs  mod.rs  pades.rs  pkcs11.rs
src/models/: mod.rs
src/utils/: config.rs  mod.rs
test-result/: DSS-ETSI-Report.xml
test_files/: test_document.txt
