[package]
name = "kimi-signer"
version = "0.1.0"
edition = "2021"
description = "Open source electronic document signing application with qualified electronic signatures (CAdES/PKCS#7)"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/desktop-signer"

[dependencies]
# GUI Framework - eframe/egui (pure Rust, no GTK dependency)
eframe = { version = "0.28", features = ["default"] }
egui = "0.28"
egui_extras = { version = "0.28", features = ["image", "file"] }

# File dialogs
rfd = "0.14"

# PKCS#11 for smart card/token communication
cryptoki = "0.7"
cryptoki-sys = "0.1"

# Cryptographic operations
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9"

# CMS/PKCS#7 and CAdES
cms = "0.2"
const-oid = { version = "0.9", features = ["db"] }

# X.509 Certificates
x509-cert = "0.2"

# ASN.1/DER encoding
der = "0.7"
spki = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }

# File system operations
walkdir = "2"

# Hashing
sha2 = "0.10"
sha1 = "0.10"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
